# kino-banking-system

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Main.cpp  main.cpp
src/core/: access_manager.cpp  access_manager.hpp  account.cpp  account.hpp  branches.hpp  currency.hpp  customer.cpp  customer.hpp  database_manager.cpp  database_manager.hpp  exchange_rate_manager.cpp  exchange_rate_manager.hpp  money.cpp  money.hpp  name.cpp  name.hpp  user_mode.hpp  user_privilege_level.hpp  window_manager.cpp  window_manager.hpp
src/menus/: admin_menu.cpp  admin_menu.hpp  create_new_manager_menu.cpp  create_new_manager_menu.hpp  customer_menu.cpp  customer_menu.hpp  main_menu.cpp  main_menu.hpp  manager_menu.cpp  manager_menu.hpp  menu.cpp  menu.hpp  view_managers_menu.cpp  view_managers_menu.hpp
src/menus/admin/: create_manager_menu.cpp  create_manager_menu.hpp  update_manager_field_menu.cpp  update_manager_field_menu.hpp  update_manager_menu.cpp  update_manager_menu.hpp  view_managers_menu.cpp  view_managers_menu.hpp
src/terminal/: terminal_user_interface.cpp  terminal_user_interface.hpp  user_interface.cpp  user_interface.hpp
src/util/: date.cpp  date.hpp  name.cpp  name.hpp
tests/: test_something.cpp
